--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Soft Bites - Den Bedste Godbid</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     
