--- a/index.html
+++ b/index.html
@@ -2,23 +2,48 @@
 <html lang="da">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Soft Bites - Den Bedste Godbid</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="pagewrap">
             <header>
                 <nav class="menu">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
 
+                      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                          <li class="nav-item active">
+                            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item active">
+                            <a class="nav-link" href="#softbites">Soft Bites <span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item active">
+                            <a class="nav-link" href="#training">Træning <span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item active">
+                            <a class="nav-link" href="#apport">Apport <span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item active">
+                            <a class="nav-link" href="#trivsel">Trivsel <span class="sr-only">(current)</span></a>
+                          </li>
+                        </ul>
+                      </div>
+                    </nav>
                 </nav>
             </header>
 
-            <section class="home">
+            <section id="home">
 
             </section> <!-- DETTE ER HOME/LANDING PAGE -->
 
-            <section class="softbites">
+            <section id="softbites">
                 <h1>SOFT BITES</h1>
                 <h2>Den bedste godbid</h2>
                 <section class="relaterede">
@@ -26,18 +51,18 @@
                 </section> <!-- Relaterede produkter -->
             </section> <!-- DETTE ER SEKTIONEN FOR PRODUKTET -->
 
-            <section class="training">
+            <section id="training">
                 <h1>TRÆNING AF DIN HUND</h1>
 
                 <h2>Det gode ved træning</h2>
 
             </section> <!-- Sektionen der omhandler hunde træning -->
 
-            <section class="apport">
+            <section id="apport">
                 <h2>Lær din hund apport</h2>
             </section> <!-- Sektionen der omhandler at lære sin hund apport -->
 
-            <section class="trivsel">
+            <section id="trivsel">
                 <h2>Trivsel</h2>
             </section> <!-- Sektionen der omhandler hundes trivsel -->
 
@@ -45,5 +70,8 @@
 
             </footer>
         </div> <!-- pagewrap -->
+        
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
 </html>
