--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <section id="softbites">
                 <h1>SOFT BITES</h1>
                 <h2>Den bedste godbid</h2>
-                <section class="relaterede">
+                <section id="relaterede">
                     <h2>Relaterede produkter</h2>
                 </section> <!-- Relaterede produkter -->
             </section> <!-- DETTE ER SEKTIONEN FOR PRODUKTET -->
