--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <body>
         <div id="pagewrap">
             <header>
+                  <a class="navbar-brand">
+                        <img src="logo.png" width="40" height="40" alt="smart pets logo" loading="lazy">
+                        </a>
+
                 <nav class="menu">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <nav class="navbar navbar-expand-lg navbar-light">
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
-
-                      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                           <li class="nav-item active">
                             <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
