--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <body>
         <div id="pagewrap">
             <header>
-                  <a class="navbar-brand">
-                        <img src="logo.png" width="40" height="40" alt="smart pets logo" loading="lazy">
-                        </a>
-
                 <nav class="menu">
                     <nav class="navbar navbar-expand-lg navbar-light">
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +34,7 @@
                           </li>
                         </ul>
                       </div>
+                        <img src="logo.png" width="" height=""alt="smart pets logo" loading="lazy" id="logo">
                     </nav>
                 </nav>
             </header>
