--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                           </li>
                         </ul>
                       </div>
-                        <img src="logo.png" width="" height=""alt="smart pets logo" loading="lazy" id="logo">
+                        <img src="logo.png" alt="smart pets logo" loading="lazy" id="logo">
                     </nav>
                 </nav>
             </header>
