--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <div id="pagewrap">
             <header>
                 <nav class="menu">
+                    <img src="logo.png" alt="smart pets logo" loading="lazy" id="logo">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                      <button class="navbar-toggler" "button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <img id="menuicon" src="menuicon.png">
                       </button>
                      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -34,7 +35,6 @@
                           </li>
                         </ul>
                       </div>
-                        <img src="logo.png" alt="smart pets logo" loading="lazy" id="logo">
                     </nav>
                 </nav>
             </header>
