tekst til step by step guide
en step by step guide til "rul rundt" er oprettet

Co-Authored-By: Nufri14 <71630699+Nufri14@users.noreply.github.com>
Co-Authored-By: Lethanavir <71630066+lethanavir@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
             </section> <!-- Sektionen der omhandler hunde træning -->
 
             <section id="apport">
-                <h2>Lær din hund apport</h2>
+                <h2>Lær din hund at "Rul rundt"</h2>
+                <p>En god godbid kan gøre livet så meget nemmere når du vil lære din hund tricks. Du kan for eksempel prøve at følge denne simple guide til at lære din hund at ”Rul rundt”.</p>
+                <ol id="stepbystep">
+                    <li class="steps">Tag en Soft Bites godbid i hånden og sæt dig ned foran din hund</li>
+                    <li class="steps">Put godbidden foran din hunds næse, mens du stadig holder den i din hånd</li>
+                    <li class="steps">Lad hunden slikke og bide lidt efter den, mens du langsomt bevæger godbidden og samtidigt lokker hundens næse mod en af dens skulderblade. Hunden skulle gerne lægge sig på siden og så giver du den sin første godbid.</li>
+                    <li class="steps">Tag en anden godbid og langsomt lok hundens næse videre mod dens modsatte skulderblade så dens snude peger opad. Når hunden lægger sig på sin ryg kan du give den sin anden godbid.</li>
+                    <li class="steps">Nu tager du den tredje godbid og bruger den til at langsomt lokke hundens næse rundt om sig selv så den ender med at lægge sig på sin anden side end den gjorde til at starte med i step 3.</li>
+                    <li class="steps">Når hunden ligger på sin modsatte side, så lægger du godbidden lidt væk fra hunden, i samme retning den kigger. Det vil få hunden til at rotere den sidste del af vejen og stå op. Og husk nu at fortælle din hund den gjorde et godt stykke arbejde.</li>
+                    <li class="steps">Nu kan du køre samme proces igen, men kun med en godbid hele vejen. Hvor du til sidst efter nok repetition kan begynde at signalere det med din hånd uden en godbid og give den en godbid efterfølgende.</li>
+                </ol>
             </section> <!-- Sektionen der omhandler at lære sin hund apport -->
 
             <section id="trivsel">
