--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
             </section> <!-- Sektionen der omhandler at lære sin hund apport -->
 
             <section id="trivsel">
-                <h2>Trivsel</h2>
+                <article>
+                    <h2>Hundens sprog</h2>
+                        <p>Det er vigtigt for dig og din hunds træning, at du forstår dens kropssprog. Menneskers kommunikation er i høj grad baseret på at tale sammen. Vi bruger også kropssprog, men fokuserer oftest på talen. </p>
+                        <p>Med hunde er det omvendt. Hunden kommunikerer primært via mimiske og kropslige signaler. Den kan også udtrykke sig med stemmen med sin gøen. Oftest har den en lys gøen, hvis den vil lege. Hvis hunden er mere alvorlig, fx hvis den vil vogte haven og gør af en forbipasserende i haven. Så er gøen oftest mørk.</p>
+                        <p>Ved at kende din hunds kropssignaler, vil du som ejer være i stand, til at hjælpe din hund ud af situationer, som den tydeligt beder om hjælp til. </p>
+                        <p>Du vil forstå den meget bedre til træningen. Når den prøver at signalere, at den ikke forstår, hvad du vil have den til.</p>
+                        <p>Du vil give din hund det bedste liv med dig med en viden om tryghed ved, at den bliver forstået, når den kommunikerer til dig.</p>
+                        <p>En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”. <a href="https://www.adaptil.com/dk/hund/hundesprog">Læs mere om din hunds kropsignaler her.</a></p>
+                </article>
             </section> <!-- Sektionen der omhandler hundes trivsel -->
 
             <footer>
