--- a/index.html
+++ b/index.html
@@ -65,12 +65,8 @@
             <section id="trivsel">
                 <article>
                     <h2>Hundens sprog</h2>
-                        <p>Det er vigtigt for dig og din hunds træning, at du forstår dens kropssprog. Menneskers kommunikation er i høj grad baseret på at tale sammen. Vi bruger også kropssprog, men fokuserer oftest på talen. </p>
-                        <p>Med hunde er det omvendt. Hunden kommunikerer primært via mimiske og kropslige signaler. Den kan også udtrykke sig med stemmen med sin gøen. Oftest har den en lys gøen, hvis den vil lege. Hvis hunden er mere alvorlig, fx hvis den vil vogte haven og gør af en forbipasserende i haven. Så er gøen oftest mørk.</p>
-                        <p>Ved at kende din hunds kropssignaler, vil du som ejer være i stand, til at hjælpe din hund ud af situationer, som den tydeligt beder om hjælp til. </p>
-                        <p>Du vil forstå den meget bedre til træningen. Når den prøver at signalere, at den ikke forstår, hvad du vil have den til.</p>
-                        <p>Du vil give din hund det bedste liv med dig med en viden om tryghed ved, at den bliver forstået, når den kommunikerer til dig.</p>
-                        <p>En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”. <a href="https://www.adaptil.com/dk/hund/hundesprog">Læs mere om din hunds kropsignaler her.</a></p>
+                        <p>At have en hund som trives er vigtigt. Jo bedre din hund trives - jo gladere hund har du i hjemmet, hvilket vil være til stor glæde for dig, din familie og dine gæster. Er dit kæledyr for f.eks. ikke tryg ved at blive efterladt alene hjemme, når du forlader hjemmet, er det vigtigt at træne for at skabe bedre trivsel for din hund. </p>
+                        <p>Din hunds trivsel bliver også bedre ved at blive aktiveret og stimuleret. At træne med din hund gør også, at I forstår hinanden bedre og kan aflæse hinandens signaler. Derved opnår du en bedre kommunikation mellem din hund og dig. En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”.</p>
                 </article>
             </section> <!-- Sektionen der omhandler hundes trivsel -->
 
