--- a/index.html
+++ b/index.html
@@ -48,8 +48,17 @@
                 <div id="turkisborder">
                     <section id="softbites">
                         <h1>SOFT BITES</h1>
+                        <p>Hvis du er en hundeejer som ville elske at træne din hund og gøre træning lidt nemmere og sjovere for dig selv og hunden, men ikke har budgettet til at bruge kassen. Så har vi lige det du søger efter.</p>
+                        
                         <h2>Den bedste godbid</h2>
-
+                        <ul id="fordele">
+                            <li class="godepointer">Høj kvalitet til en billig discountpris</li>
+                            <li class="godepointer">Bagte godbidder</li>
+                            <li class="godepointer">18,5% vand, så det er semi-moist </li>
+                            <li class="godepointer">Naturlige råvarer </li>
+                            <li class="godepointer">Perfekte belønningsgodbidder for den gode hundetræning</li>
+                            <li class="godepointer">Kan købes hos din lokale købmand</li>
+                        </ul>
                     </section> <!-- DETTE ER SEKTIONEN FOR PRODUKTET -->
                     
                         <section id="relaterede">
