--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
                     </section> <!-- Sektionen der omhandler hunde træning -->
 
                     <section id="apport">
-                        <h2>Lær din hund apport</h2>
+                        <h2>Lær din hund at "sit"</h2>
+                        <p>En god godbid kan gøre livet så meget nemmere når du vil lære din hund tricks. Du kan for eksempel prøve at følge denne simple guide til at lære din hund at ”Sit”:
+                        </p>
+                        <ol id="howtosit">
+                            <li class="sitsteps">Tag en af dine Soft Bites i hånden og sæt dig foran din hund</li>
+                            <li class="sitsteps">Vis din at hans/hendes godbid er i din hånd, så han/hun begynder at gå efter godbidden</li>
+                            <li class="sitsteps">Put godbidden foran din hunds næse, mens du stadig holder den i din hånd</li>
+                            <li class="sitsteps">lad hunden slikke og bidde lidt efter den, mens du langsomt bevæger godbidden og samtidigt lokker hundens næse op over dens hoved</li>
+                            <li class="sitsteps">Nu burde hunden lille stille begynde at ”sitte”. Når den er i ”sit”, giver du hunden dens godbid og fortæller at den gjorde det godt</li>
+                            <li class="sitsteps">Gør det samme igen et par gange og så kan du begynde at sige ”sit” når han skal ”sitte”</li>
+                        </ol>
                     </section> <!-- Sektionen der omhandler at lære sin hund apport -->
 
                     <section id="trivsel">
