--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                         <h2>Trivsel</h2>
                         <p>At have en hund som trives er vigtigt. Jo bedre din hund trives - jo gladere hund har du i hjemmet, hvilket vil være til stor glæde for dig, din familie og dine gæster. Er dit kæledyr for f.eks. ikke tryg ved at blive efterladt alene hjemme, når du forlader hjemmet, er det vigtigt at træne for at skabe bedre trivsel for din hund. </p>
                         <p>Din hunds trivsel bliver også bedre ved at være aktiv og stimuleret. At træne med din hund gør også, at I forstår hinanden bedre og kan aflæse hinandens signaler. Derved opnår du en bedre kommunikation mellem din hund og dig. En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”.</p>
+                        
+                        <img src="trivselbillede.png" id="hundehighfive">
                     </section> <!-- Sektionen der omhandler hundes trivsel -->
                 </div> <!-- denne div er til at lave den indre border af vores double border. Denne er turkis. -->
             </div> <!-- denne div er til at lave den ydre border af vores double border. Denne er hvid. -->
