billed og tekst komposition
billed og tekst står som det skal på tablet og dekstop

Co-Authored-By: Lethanavir <71630066+Lethanavir@users.noreply.github.com>
Co-Authored-By: Nufri14 <71630699+Nufri14@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
                     </section> <!-- Sektionen der omhandler at lære sin hund apport -->
 
                     <section id="trivsel">
-                        <h2>Trivsel</h2>
-                        <p>At have en hund som trives er vigtigt. Jo bedre din hund trives - jo gladere hund har du i hjemmet, hvilket vil være til stor glæde for dig, din familie og dine gæster. Er dit kæledyr for f.eks. ikke tryg ved at blive efterladt alene hjemme, når du forlader hjemmet, er det vigtigt at træne for at skabe bedre trivsel for din hund. </p>
-                        <p>Din hunds trivsel bliver også bedre ved at være aktiv og stimuleret. At træne med din hund gør også, at I forstår hinanden bedre og kan aflæse hinandens signaler. Derved opnår du en bedre kommunikation mellem din hund og dig. En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”.</p>
+                    <div id="containertrivsel">
+                        <h2 id="overskrifttiltrivsel">Trivsel</h2>
+                        <p id="teksttrivsela">At have en hund som trives er vigtigt. Jo bedre din hund trives - jo gladere hund har du i hjemmet, hvilket vil være til stor glæde for dig, din familie og dine gæster. Er dit kæledyr for f.eks. ikke tryg ved at blive efterladt alene hjemme, når du forlader hjemmet, er det vigtigt at træne for at skabe bedre trivsel for din hund. </p>
+                        
+                        <p id="teksttrivselb">Din hunds trivsel bliver også bedre ved at være aktiv og stimuleret. At træne med din hund gør også, at I forstår hinanden bedre og kan aflæse hinandens signaler. Derved opnår du en bedre kommunikation mellem din hund og dig. En fælles forståelse mellem din hund og dig styrker jeres forhold og dermed følelsen af at være ”bedste venner”.</p>
+                        </div> <!-- container til grid for dekstop og tablet -->
                         
                         <img src="trivselbillede.png" id="hundehighfive">
                     </section> <!-- Sektionen der omhandler hundes trivsel -->
