--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
             </div> <!-- denne div er til at lave den ydre border af vores double border. Denne er hvid. -->
                 
 
-            <footer>
+            <div id="overlap">       
+                <img src="golden.png" alt="golden retriever">
+                <footer>
 
-            </footer>
+                </footer>
+            </div>
         </div> <!-- pagewrap -->
         
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
