--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                             <li class="godepointer">18,5% vand, så det er semi-moist </li>
                             <li class="godepointer">Naturlige råvarer </li>
                             <li class="godepointer">Perfekte belønningsgodbidder for den gode hundetræning</li>
-                            <li class="godepointer">Kan købes hos din lokale købmand</li>
                         </ul>
+                        <img id="posesoftbites" src="posemedsoftbites.png" alt="pose med softbites">
+                        <p id="købmandtekst">Forhandles ved din lokale købmand</p>
+                        <img id="forhandlere" src="butikker.png" alt="Forhandlere. Meny, Spar, Min købmand og Let-køb">
                     </section> <!-- DETTE ER SEKTIONEN FOR PRODUKTET -->
                     
                         <section id="relaterede">
