--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                             <li class="godepointer">Perfekte belønningsgodbidder for den gode hundetræning</li>
                         </ul>
                         <img id="posesoftbites" src="posemedsoftbites.png" alt="pose med softbites">
-                        <p id="købmandtekst">Forhandles ved din lokale købmand</p>
+                            <div id="cta">
+                                <button type="button" class="btn btn-warning"><a link href="https://www.nemlig.com/godbidder-til-hunde-5039524">Køb her</a></button>
+                            </div>
+                        <p id="købmandtekst">Eller køb dem ved din lokale købmand</p>
                         <img id="forhandlere" src="butikker.png" alt="Forhandlere. Meny, Spar, Min købmand og Let-køb">
                     </section> <!-- DETTE ER SEKTIONEN FOR PRODUKTET -->
                     
