--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
                         
                         <img src="trivselbillede.png" id="hundehighfive">
                     </section> <!-- Sektionen der omhandler hundes trivsel -->
+            <footer>
+            <img id="facebook" src="facebook.png" alt="facebook ikon">
+            <img id="twitter" src="twitter.png" alt="twitter ikon">
+            <img id="instagram" src="instagram.png" alt="instagram ikon"></footer>
             <div id="overlap">       
-                <img src="golden.png" alt="golden retriever">
-                <footer>
-
-                </footer>
+                <img id="goldenretriever" src="golden.png" alt="golden retriever">
             </div>
         </div> <!-- pagewrap -->
         
