--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#training">Træning <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item active">
-                            <a class="nav-link" href="#apport">Apport <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#apport">Sit <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item active">
                             <a class="nav-link" href="#trivsel">Trivsel <span class="sr-only">(current)</span></a>
