--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="da">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Soft Bites - Den Bedste Godbid</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Dette er et studieprojekt og denne side er resultatet af et one-page projekt. Denne side har til formål, at promovere produktet; Soft Bites fra Smart Pets. Her kan man også læse lidt om hundetræning og hundens trivsel">
+        <meta keywords="Soft Bites, Smart Pets, hund, godbidder, discount, hundetræning, hundens trivsel, Biscuits, Strips, Denta sticks">
+        <meta name="author" content="Lissi, Drescher og Nuunu">
+        <base href="index.html">
+        <title>Soft Bites - Den Bindex.htmledste Godbid</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
