--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="pagewrap">
             <header>
                 <nav class="menu">
-                    <img src="logo.png" alt="smart pets logo" loading="lazy" id="logo">
+                    <a href="#home"><img src="logo.png" alt="smart pets logo" loading="lazy" id="logo"></a>
                     <nav class="navbar navbar-expand-lg navbar-light">
                       <button class="navbar-toggler" "button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <img id="menuicon" src="menuicon.png">
