--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                             <h2>Relaterede produkter</h2>
                             
                             <ul class="produkterne">
-                                <li><a href="https://www.nemlig.com/denta-sticks-til-hunde-5039526"><img src="Dental%20sticks%20PNG.png" id="denta"></a></li>
-                                <li><a href="https://www.nemlig.com/hundekiks-5039528"><img src="biscuits%20Mixed%202%20-%20png.png" id="mixed"></a></li>
-                                <li><a href="https://www.nemlig.com/hundesnack-m-oksekoed-5039523"><img src="Strips%20PNG.png" id="strips"></a></li>
+                                <li><a href="https://www.nemlig.com/denta-sticks-til-hunde-5039526"><img src="Dental%20sticks%20PNG%20(1).png" id="denta"></a></li>
+                                <li><a href="https://www.nemlig.com/hundekiks-5039528"><img src="biscuits%20Mixed%20%20PNG.png" id="mixed"></a></li>
+                                <li><a href="https://www.nemlig.com/hundesnack-m-oksekoed-5039523"><img src="Strips%20PNG%20(1).png" id="strips"></a></li>
                             </ul>
                         </section> <!-- Relaterede produkter -->     
             
