--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                         </p>
                         <ol id="howtosit">
                             <li class="sitsteps">Tag en af dine Soft Bites i hånden og sæt dig foran din hund</li>
-                            <li class="sitsteps">Vis din at hans/hendes godbid er i din hånd, så han/hun begynder at gå efter godbidden</li>
+                            <li class="sitsteps">Vis den at hans/hendes godbid er i din hånd, så han/hun begynder at gå efter godbidden</li>
                             <li class="sitsteps">Put godbidden foran din hunds næse, mens du stadig holder den i din hånd</li>
                             <li class="sitsteps">lad hunden slikke og bidde lidt efter den, mens du langsomt bevæger godbidden og samtidigt lokker hundens næse op over dens hoved</li>
                             <li class="sitsteps">Nu burde hunden lille stille begynde at ”sitte”. Når den er i ”sit”, giver du hunden dens godbid og fortæller at den gjorde det godt</li>
-                            <li class="sitsteps">Gør det samme igen et par gange og så kan du begynde at sige ”sit” når han skal ”sitte”</li>
+                            <li class="sitsteps">Gør det samme igen et par gange og så kan du begynde at sige ”sit” når han/hun skal ”sitte” og bruge håndtegn til at signalere dit ønske</li>
                         </ol>
                         </div>
                         <img src="softbiteregn.png" id="regn3">
