--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <section id="softbites">
                        <div class="tekstsoftbites">
                             <h1>SOFT BITES</h1>
-                            <p>Hvis du er en hundeejer som ville elske at træne din hund og gøre træning lidt nemmere og sjovere for dig selv og hunden, men ikke har budgettet til at bruge kassen. Så har vi lige det du søger efter.</p>
+                            <p>Hvis du er en hundeejer som vil elske at lære din hund nye tricks, og gerne vil gøre træningen lidt nemmere og sjovere for dig selv og hunden, men ikke har budgettet til at bruge kassen. Så har vi lige det du søger efter.</p>
                         </div> 
                         
                         <div id="fordelecontainer">
